hemliga-lappen-main/k8s/overlays/stage/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hemliga-lappen-stage-rollout
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hemliga-lappen
      team: team-devops
      unit: developers
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: hemliga-lappen-deployment
  strategy:
    canary:
      # Analysis that starts when there is a new canary update
      # this analysis will run during the whole rollout process
      # if there is a failure the rollout will be aborted and the
      # canary will be removed
      analysis:
        startingStep: 1 # start after weight 20%
        templates:
        - templateName: request-duration-99th-percentile
          clusterScope: true
        - templateName: success-rate-non-5xx
          clusterScope: true
        args:
        - name: service-name
          value: hemliga-lappen-stage-canary
      steps:
      - analysis:
          templates:
          - templateName: load-test-errors-latency
            clusterScope: true
          args:
          - name: url
            value: http://hemliga-lappen-canary.stage.ur.se
      - setWeight: 20
      - analysis:
          templates:
          - templateName: always-pass
            clusterScope: true
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}

      canaryService: hemliga-lappen-stage-canary #required
      stableService: hemliga-lappen-service  # required
      trafficRouting:
        nginx:
          stableIngress: hemliga-lappen-ingress
          additionalIngressAnnotations:   # optional
            nginx.ingress.kubernetes.io/canary: "true"
            canary-by-header: X-Canary
            canary-by-header-value: canary
          ignoredAnnotations:
            - field.cattle.io/publicEndpoints
