hemliga-lappen-main/k8s/overlays/stage/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: hemliga-lappen-stage-canary
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hemliga-lappen
